--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,21 @@
-body {
-    background-color: lightgray;
+h1{
+    text-align: center;
+    margin: 20px;
+}
+form{
+    margin-left: 22%;
+    margin-right: 22%;
+}
+.card{
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-bottom: 2%;
+}
+.add{
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+#searchBar {
+    max-height: 40px;
 }
